Syroot.{BinaryData,Maths}: Use Git(submodule)/NuGet instead of binaries
And in *.csproj:
  * Add XML declaration
  * Remove empty line(s) at the beginning of files

BfresLibrary.csproj:
  * Change net45 to net46 in <TargetFrameworks> because Syroot.Maths requires .NET Framework 4.6 and/or .NET Standard 2.0

--- a/BfresLibrary/BfresLibrary.csproj
+++ b/BfresLibrary/BfresLibrary.csproj
@@ -1,6 +1,4 @@
-﻿
-
-
+<?xml version="1.0" encoding="utf-8" ?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Authors>Syroot;</Authors>
@@ -16,21 +14,20 @@
     <PackageTags>bfres;cafe;nintendo;nw4f;wiiu;nx;switch;</PackageTags>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://gitlab.com/Syroot/NintenTools.Bfres</RepositoryUrl>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
     <VersionPrefix>1.6.0</VersionPrefix>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <RootNamespace>BfresLibrary</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Syroot.Maths" Version="1.5.3" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Syroot.BinaryData">
-      <HintPath>..\Libraries\Syroot.BinaryData.dll</HintPath>
-    </Reference>
-    <Reference Include="Syroot.Maths">
-      <HintPath>..\Libraries\Syroot.Maths.dll</HintPath>
-    </Reference>
+    <!-- Syroot.BinaryData v2.0.1 does not exist in NuGet -->
+    <ProjectReference Include="../Libraries/Syroot.BinaryData/src/Syroot.BinaryData/Syroot.BinaryData.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="Syroot.NintenTools.NSW.Bntx">
       <HintPath>..\Libraries\Syroot.NintenTools.NSW.Bntx.dll</HintPath>
     </Reference>
