--- a/BfresLibrary.Test/BfresLibrary.Test.csproj
+++ b/BfresLibrary.Test/BfresLibrary.Test.csproj
@@ -13,12 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BfresLibrary\BfresLibrary.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Syroot.NintenTools.NSW.Bntx">
-      <HintPath>..\Libraries\Syroot.NintenTools.NSW.Bntx.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Libraries/LegacySwitchLibraries/Syroot.NintenTools.Bntx/Syroot.NintenTools.NSW.Bntx.csproj" />
   </ItemGroup>
 
 </Project>
